Version 21 (xx-DEC-2006)
----------

- m8cbscan/: new static connection checker that performs a boundary scan
  through ISSP
- Common.make: VERSION is now a string, not a number
- as/tests/Common: added function "edit" to run sed on _out
- as/tests/Common: added function files_noas to add a file without putting it
  on the command line of m8cas
- Common.make: set YACC to "bison -y" to gain access to extension "YYEMPTY"
  (updated as/tests/redef_undef)
- shared/error.c:set_file: convert empty file names to "<stdin>"
- as/: added support for IF ... ELSE ... ENDIF (as/tests/if, as/tests/if_nest,
  as/tests/if_la, as/tests/if_err)
- as/: added support for MACRO ... ENDM (as/tests/macro, as/tests/macro_nest,
  as/tests/macro_sep, as/tests/macro_if, as/tests/macro_err; updated
  as/tests/sep_cpp)
- as/: added support for INCLUDE (as/tests/include)

Version 20 (5-DEC-2006)
----------

- shared/file.c:read_binary: complained that files of exactly 32 kB were
  already too big
- prog/torture.c: updated and made compile again, now for real
- prog/torture.c: added optional cycles per session argument
- prog/torture.c: added detection of session loss (chip stops responding)
- prog/Makefile: added target torture-static and changed -lssl to -lcrypto
- prog/Makefile: also remove "torture" when cleaning up
- prog/README: updated description of the protocol stack
- prog/README: added a "quick start" section
- shared/util.h: added convenience functions alloc_type_n and realloc_type
- prog/cli.[ch]:prog_close_cli: now has an argument to indicate whether a new
  session will be opened with the same settings
- prog/vector.h:VECTOR_ADDR, VECTOR_DATA: new macros to extract vector
  components
- shared/interact.c:progress: reduced number of characters output for the
  progress bar by a factor of up to 250
- prog/prog_ops.c:ops_write_program: skip blocks containing only zeroes
- prog/drv/*.c: made bit- and vector-level operations structures "static"