@@ -23,7 +23,7 @@ TESTS=adc_nc adc_c_in adc_c_out adc_nz adc_z adc_nc_z adc_c_z \
       addrop printf sleep break unbreak breakint \
       bugs7 bugs8 \
       symbols symexpr symquot regreg ppreg \
-      noice
+      noice dm
 FILES=README Makefile \
       lang.l lang.y lang.h id.h id.c \
       reg.h reg.c core.h core.c sim.h sim.c gpio.h gpio.c \
